connect with us fix

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                         <p>
                             Connect with us
                         </p>
-                        <p>
+                        <div class="connect">
                             <a href="https://id-id.facebook.com/binaracademy/">
                                 <img src="public/OwlCarousel 2/img/icon_facebook.png" alt="Facebook">
                             </a>
@@ -457,7 +457,7 @@
                             <a href="https://www.twitch.tv/">
                                 <img src="public/OwlCarousel 2/img/icon_twitch.png" alt="Twitch">
                             </a>
-                        </p>
+                        </div>
                     </div>
                     <div class="col">
                         <p>
