--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
-    <title>Document</title>
+    <title>FSW13-Narantyo-Chapter1</title>
 </head>
 <body>
 <!-- NAVBAR-->
